# sigpac-tools

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
sigpac_tools/: __main__.py  _globals.py  anotate.py  find.py  generate.py  locate.py  search.py  utils.py
src/: wip-file.py
tests/: test_anotate.py  test_generate.py  test_integration.py  test_locate.py  test_search.py  test_utils.py
